# avr-node

./: CMakeLists.txt  README.md
cmake/: avr.cmake
src/: board.c  board.h  board.types.h  board_b02.c  board_b02.h  logger.c  logger.h  lwjson_opts.h  main.c  node.mapper.c  node.mapper.h  node.msg.h  tcp_client.c  tcp_client.h
src/mcu/: adc.c  adc.h  config.h  i2c.c  i2c.h  int_0.c  int_0.h  int_1.c  int_1.h  pcint_b.c  pcint_b.h  pcint_c.c  pcint_c.h  pcint_d.c  pcint_d.h  spi.c  spi.h  sw_uart.c  sw_uart.h  timer_0.c  timer_0.h  timer_1.c  timer_1.h  timer_2.c  timer_2.h  uart.c  uart.h
